Completed authentication system. Completed request system. Completed authentication and edge-cases node digester. Completed ContactId refactor(old jid) Completed WhatsappUtils refactor. Completed structure refactor. TODO: Move off lib-signal library(unnecessary and non-modular) TODO: Analyze Whatsapp requests and implement all the functions of the standard API